[package]
name = "win_run"
version = "0.2.1"
edition = "2021"
authors = ["hristogochev"]
description = "Run any executable as User, Admin or Local System from a Windows Service."
license = "MIT"
documentation = "https://docs.rs/win_run/"
homepage = "https://github.com/hristogochev/win_run"
repository = "https://github.com/hristogochev/win_run"
readme = "README.md"
keywords = ["windows", "service", "run", "executable", "desktop"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
windows = { version = "0.48", features = ["Win32", "Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Win32_System_RemoteDesktop"] }
sysinfo = { version = "0.29", default-features = false }
widestring = "1"
